<resources>
    <string name="app_name">Park In</string>
    <string name="enter_your_mobile_number">Enter Your Mobile Number</string>
    <string name="enter_your_phone_number_we_will_send_you_a_six_digit_otp_to_verify_your_phone_number">Enter your phone number we will send you a six-digit OTP to verify your phone number</string>
    <string name="send_code">Send Code</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="tap_to_retry">Tap to Retry</string>
    <string name="error_no_internet">No Internet Connection</string>
    <string name="error_permission_required">Permission Required</string>
    <string name="verification">Verification</string>
    <string name="seconds">seconds</string>
    <string name="enter_verification_code">Enter Verification code</string>
    <string name="login">Login</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_will_send_you_a_one_time_password_on_n_this_b_mobile_number_b">We will send you a one time password on\n this  <b>Mobile Number</b></string>
    <string name="_00_30">00.30</string>
    <string name="resend">Resend</string>
    <string name="do_not_received_otp">Do not received OTP?</string>
    <string name="submit">Submit</string>
    <string name="_8801810620700">+8801810620700</string>
    <string name="hi">Hi,</string>
    <string name="find_your_nparking_space">Find your \nParking Space</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="cost_per_hour">Ultimate cost per hour</string>
    <string name="nid_number">NID Number</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="register">Register</string>
    <string name="phone_number">Phone Number</string>
    <string name="find_parking_space">Find Parking Space</string>
    <string name="bookings">Bookings</string>
    <string name="use_promo_code">Use Promo Code</string>
    <string name="monthly_parking">Monthly Parking</string>
    <string name="monthly_parking02">Monthly</string>
    <string name="daily_parking">Daily Parking</string>
    <string name="daily_parking01">Daily</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="openNavDrawer">Navigation Drawer Open</string>
    <string name="closeNavDrawer">Navigation Drawer Close</string>

    <string name="map_Api_key" translatable="false">
   AIzaSyALESWjAwk1lsG7RD0QrxNDSrNkD1IF01g</string>
    <string name="dhaka_bangladesh">Dhaka, Bangladesh</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="con_password">Confirm Password</string>
    <string name="need_to_registration_as_a_parking_owner">Registration as a Parking Owner?</string>
    <string name="purpose">Purpose</string>
    <string name="time">Time</string>
    <string name="add_parking_space">Add Parking Space</string>
    <string name="add_monthly_parking">Add Monthly Parking</string>
    <string name="transaction">Transaction</string>
    <string name="notification">Notification</string>
    <string name="place_name">Place name</string>
    <string name="total_space">Total Parking Space</string>
    <string name="amount">Amount</string>
    <string name="date_time">Date and time</string>
    <string name="promo_code_title">Promo code</string>
    <string name="promo_code">Use Promo Code</string>
    <string name="ok">OK</string>
    <string name="no_item">No resources found.\n Please use the Service first.</string>
    <string name="distance">Distance</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="available_slot">Available Slot</string>
    <string name="price">Price</string>
    <string name="confirm_booking">Confirm Booking</string>
    <string name="month">Month</string>
    <string name="card_name">Card Name</string>
    <string name="card_number">Card Number</string>
    <string name="cvv">CVV</string>
    <string name="add_card">Add Card</string>
    <string name="add_new_card">Add New Card</string>
    <string name="payment">Payment</string>
    <string name="previous">Previous</string>
    <string name="ongoing">Ongoing</string>
    <string name="upcoming">Upcoming</string>
    <string name="parking_space">Parking Spaces</string>
    <string name="login_as_a_parking_owner">Login as a Parking Owner?</string>
    <string name="total_earning">Total Earning</string>
    <string-array name="month">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>Jun</item>
        <item>Jul</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>

    <string-array name="slot">
        <item>12.00 am - 02.00 am</item>
        <item>02.00 am - 04.00 am</item>
        <item>04.00 am - 06.00 am</item>
        <item>06.00 am - 08.00 am</item>
        <item>08.00 am - 10.00 am</item>
        <item>10.00 am - 12.00 pm</item>
        <item>12.00 pm - 02.00 pm</item>
        <item>02.00 pm - 04.00 pm</item>
        <item>04.00 pm - 06.00 pm</item>
        <item>06.00 pm - 08.00 pm</item>
        <item>08.00 pm - 10.00 pm</item>
        <item>10.00 pm - 12.00 am</item>
    </string-array>
    <string-array name="monthly_slot">
        <item>06.00 pm - 06.00 am</item>
        <item>06.00 am - 06.00 pm</item>
    </string-array>

    <string-array name="type_mobile">
        <item>Bkash</item>
        <item>Nagad</item>
        <item>Rocket</item>
    </string-array>
</resources>